Font ultra bold for hero description

--- a/yamaha/index.html
+++ b/yamaha/index.html
@@ -78,7 +78,7 @@
         class="container d-flex flex-column align-items-center justify-content-center gap-4"
       >
         <img src="./pic/heroLogo.svg" alt="" class="w-75 w-lg-100" />
-        <div class="hero-desc">DUKUNG SEKOLAHMU DENGAN PENUH GAYA</div>
+        <div class="hero-desc">DUKUNG SEKOLAHMU DENGAN PENUH GAYA!</div>
       </div>
       <div
         class="overlay w-100 d-flex justify-content-center align-items-center"
