Style: update hero element desc and responsiveness

--- a/yamaha/index.html
+++ b/yamaha/index.html
@@ -75,10 +75,12 @@
       class="hero d-grid align-items-center justify-content-center flex-column"
     >
       <div
-        class="container d-flex flex-column align-items-center justify-content-center gap-4"
+        class="container d-flex flex-column align-items-center justify-content-center gap-4 hero-content"
       >
-        <img src="./pic/heroLogo.svg" alt="" class="w-75 w-lg-100" />
-        <div class="hero-desc">DUKUNG SEKOLAHMU DENGAN PENUH GAYA!</div>
+        <img src="./pic/heroLogo.svg" alt="" class="w-100" />
+        <div class="hero-desc gill-sans-1000 text-center">
+          DUKUNG SEKOLAHMU DENGAN PENUH GAYA!
+        </div>
       </div>
       <div
         class="overlay w-100 d-flex justify-content-center align-items-center"
@@ -99,8 +101,8 @@
           ></iframe>
         </div>
 
-        <div class="videoDesc w-25 p-4">
-          <img src="./pic/videoTitleDesc.svg" alt="" class="mb-3" />
+        <!-- <div class="videoDesc w-25 p-4">
+          <p class="gill-sans-1000">CLASSY YAMAHA YOUTH FESTIVAL</p>
           <p>
             Classy Yamaha Youth Festival merupakan serangkaian fun event untuk
             high school students dari berbagai kota di Indonesia. Festival ini
@@ -114,7 +116,7 @@
             fashion contests, dan riding style contests. Selain itu, akan ada
             juga lifestyle workshops mengenai classy and fashionable living.
           </p>
-        </div>
+        </div> -->
       </div>
       <!-- Slider main container -->
       <div class="swiper w-75 my-5">
