Style: About Video Section Layout and Responsive Design

--- a/yamaha/index.html
+++ b/yamaha/index.html
@@ -85,60 +85,75 @@
       <div
         class="overlay w-100 d-flex justify-content-center align-items-center"
       >
-        <img src="./pic/arrowDown.svg" alt="" />
+        <a href="#about" class="py-4 px-3 rounded-pill">
+          <img src="./pic/arrowDown.svg" alt="" />
+        </a>
       </div>
     </section>
-    <section class="video py-3" id="about">
-      <div class="container d-flex gap-3 justify-content-center py-3">
-        <div class="w-50 yamahaVideo">
-          <iframe
-            src="https://20.detik.com/embed/230822105"
-            frameborder="0"
-            width="420"
-            scrolling="no"
-            allowfullscreen="true"
-            height="236"
-          ></iframe>
+
+    <section id="about" class="py-5">
+      <div class="container about-video-container">
+        <div class="d-flex flex-wrap justify-content-center">
+          <div class="col-12 col-md-7 col-lg-8 mb-md-0 mb-4">
+            <div class="video-container-ratio">
+              <iframe
+                src="https://www.cnbcindonesia.com/embed/tv"
+                frameborder="0"
+                width="420"
+                scrolling="no"
+                allowfullscreen="true"
+                height="236"
+              ></iframe>
+            </div>
+          </div>
+          <div
+            class="col-12 col-md-5 col-lg-4 p-3 about-video-description gap-3"
+          >
+            <h3 class="gill-sans-1000 px-3 mb-3">
+              CLASSY YAMAHA YOUTH FESTIVAL
+            </h3>
+            <div class="paragraph rounded px-3 py-2">
+              <p>
+                Classy Yamaha Youth Festival merupakan serangkaian fun event
+                untuk high school students dari berbagai kota di Indonesia.
+                Festival ini fokus pada spreading classy and fashionable spirit
+                melalui produk Yamaha terbaru, Fazzio dan Grand Filano, untuk
+                cool rides.
+              </p>
+              <br />
+              <p>
+                Di Classy Yamaha Youth Festival, students akan berpartisipasi
+                dalam various activities dan school competitions, music
+                performances, fashion contests, dan riding style contests.
+                Selain itu, akan ada juga lifestyle workshops mengenai classy
+                and fashionable living.
+              </p>
+            </div>
+          </div>
         </div>
-
-        <!-- <div class="videoDesc w-25 p-4">
-          <p class="gill-sans-1000">CLASSY YAMAHA YOUTH FESTIVAL</p>
-          <p>
-            Classy Yamaha Youth Festival merupakan serangkaian fun event untuk
-            high school students dari berbagai kota di Indonesia. Festival ini
-            fokus pada spreading classy and fashionable spirit melalui produk
-            Yamaha terbaru, Fazzio dan Grand Filano, untuk cool rides.
-          </p>
-          <br />
-          <p>
-            Di Classy Yamaha Youth Festival, students akan berpartisipasi dalam
-            various activities dan school competitions, music performances,
-            fashion contests, dan riding style contests. Selain itu, akan ada
-            juga lifestyle workshops mengenai classy and fashionable living.
-          </p>
-        </div> -->
-      </div>
-      <!-- Slider main container -->
-      <div class="swiper w-75 my-5">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          ...
-        </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
       </div>
     </section>
+
+    <!-- Slider main container -->
+    <div class="swiper w-75 my-5">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        ...
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+      <!-- If we need scrollbar -->
+      <div class="swiper-scrollbar"></div>
+    </div>
 
     <!-- <section class="school-competition py-5">
       <div
