style: polishing layout

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 
 <img src="./assets/images/swiper/swiper-mobile.png" alt="" />
 
+<link rel="stylesheet" href="./assets/include/swiper/swiper-bundle.min.css" />
+
 <script src="./assets/js/navbar.js"></script>
 <script src="./assets/js/script.js"></script>
+
+<img src="./assets/images/footer/sosmed-logo/tiktok.svg" alt="" />
 
 <script src="./assets/include/jquery/jquery.js"></script>
 <script src="./assets/include/swiper-min/swiper.min.js"></script>
