Mobile navbar layout

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./assets/css/general.css" />
+<!-- <link rel="stylesheet" href="./assets/css/general.css" />
 <link rel="stylesheet" href="./assets/css/navbar.css" />
 <link rel="stylesheet" href="./assets/css/hero.css" />
 <link rel="stylesheet" href="./assets/css/about-video.css" />
@@ -34,3 +34,9 @@
 <script src="./assets/include/swiper-min/swiper.min.js"></script>
 
 <script src="./assets/include/swiper/swiper-bundle.min.js"></script>
+
+<link
+  rel="stylesheet"
+  href="./assets/include/bootstrap/css/bootstrap.min.css"
+/>
+<link rel="stylesheet" href="./assets/include/bootstrap/css/" /> -->
