Style: Clickable Pagination and Swiper layout

--- a/index.html
+++ b/index.html
@@ -41,3 +41,85 @@
 />
 <link rel="stylesheet" href="./assets/include/bootstrap/css/" /> -->
 <!-- <img src="./assets/images/hero/" alt=""> -->
+
+<!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon_io (1)/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png"> -->
+
+<section id="about-swiper" class="cream-bg px-4 py-5">
+  <div class="swiper rounded">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide">
+        <a href="#">
+          <img
+            src="./assets/images/swiper/swiper-desktop.png"
+            alt=""
+            class="w-100 d-sm-block d-none image-desktop"
+          /><img
+            src="./assets/images/swiper/swiper-mobile.png"
+            alt=""
+            class="w-100 d-sm-none d-block image-mobile"
+          />
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="">
+          <img
+            src="./assets/images/swiper/swiper-desktop.png"
+            alt=""
+            class="w-100 d-sm-block d-none image-desktop"
+          /><img
+            src="./assets/images/swiper/swiper-mobile.png"
+            alt=""
+            class="w-100 d-sm-none d-block image-mobile"
+          />
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="">
+          <img
+            src="./assets/images/swiper/swiper-desktop.png"
+            alt=""
+            class="w-100 d-sm-block d-none image-desktop"
+          /><img
+            src="./assets/images/swiper/swiper-mobile.png"
+            alt=""
+            class="w-100 d-sm-none d-block image-mobile"
+          />
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="">
+          <img
+            src="./assets/images/swiper/swiper-desktop.png"
+            alt=""
+            class="w-100 d-sm-block d-none image-desktop"
+          /><img
+            src="./assets/images/swiper/swiper-mobile.png"
+            alt=""
+            class="w-100 d-sm-none d-block image-mobile"
+          />
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="">
+          <img
+            src="./assets/images/swiper/swiper-desktop.png"
+            alt=""
+            class="w-100 d-sm-block d-none image-desktop"
+          /><img
+            src="./assets/images/swiper/swiper-mobile.png"
+            alt=""
+            class="w-100 d-sm-none d-block image-mobile"
+          />
+        </a>
+      </div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination" id="swiper-pagination"></div>
+  </div>
+</section>
