Connecting bootstrap via local file

--- a/ignore.html
+++ b/ignore.html
@@ -47,3 +47,9 @@
 <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon_io (1)/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png"> -->
+<link rel="" href="./assets/fonts/Fredoka/static/Fredoka-SemiBold.ttf" />
+<link rel="stylesheet" href="./assets/include/swiper/swiper-bundle.min.css" />
+<link
+  rel="stylesheet"
+  href="./assets/include/bootstrap/css/bootstrap.min.css"
+/>
