Remove Unesscesary Code

--- a/ignore.html
+++ b/ignore.html
@@ -53,3 +53,4 @@
   rel="stylesheet"
   href="./assets/include/bootstrap/css/bootstrap.min.css"
 />
+<img src="./assets/images/hero/arrow-down.svg" alt="" />
